--- a/src/ui/molecules/Card.module.css
+++ b/src/ui/molecules/Card.module.css
@@ -45,6 +45,8 @@
   position: relative;
   z-index: 1;
   padding: 16px;
+  mix-blend-mode: var(--lg-text-blend-mode);
+  color: var(--lg-color-text-primary);
 }
 
 .content:last-child {
